# passage-simulator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  EXECUTION.md  PLAN.md  README.md  fly.toml
.github/workflows/: ci.yml
backend/: pyproject.toml  vercel.json
backend/passage/: config.py  main.py
backend/passage/api/: auth.py  cron.py  routes.py
backend/passage/db/: __init__.py  passages.py  track.py
backend/passage/engine/: __init__.py  boats.py  constants.py  motion.py  orders.py  polars.py  rng.py  simulate.py  state.py  tuning.py
backend/passage/geo/: __init__.py  sphere.py
backend/passage/weather/: cache.py  client.py  sampler.py
backend/tests/: test_auth.py  test_cron.py  test_db.py  test_health.py  test_static.py
backend/tests/db/: test_repository.py
backend/tests/engine/: test_determinism.py  test_models.py  test_motion.py  test_polars.py  test_purity.py  test_rng.py  test_simulate.py
backend/tests/fixtures/: polar_test.json
backend/tests/geo/: test_geo.py
backend/tests/weather/: test_cache.py  test_client.py  test_sampler.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
reference/: app_comparison.html
specs/: api-skeleton.md  conventions.md  deployment.md  engine-state.md  golden-fixtures.md  orders.md  weather-cache.md
supabase/: config.toml
supabase/migrations/: 20260714214613_init_app_meta.sql  20260715120000_phase1_schema.sql
tickets/: phase-0.md  phase-0v.md  phase-1.md
(+4 files in other folders)
