[project]
name = "passage"
version = "0.1.0"
description = "Sail passage simulator backend"
authors = [
    { name = "Steven Wangen", email = "i.blue442@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.3.4",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "flake8>=7.1.0",
]

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
markers = [
    "live: hits real external network services (Open-Meteo); excluded by default, see addopts",
]
addopts = "-m 'not live'"

[tool.vercel]
entrypoint = "passage.main:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
